target/fabric8/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: namics
  name: master-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: master-basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required - limbo"
    ingress.kubernetes.io/configuration-snippet: |-
      satisfy any;
      allow 10.0.0.0/8;
      deny all;
  labels:
    branch: master
spec:
  tls:
  - hosts:
    - master-limbo.env.namics-test.com
    secretName: master-ingress-tls
  rules:
  - host: master-limbo.env.namics-test.com
    http:
      paths:
      - backend:
          serviceName: master-tomcat-service
          servicePort: 9080
